--- a/Views/Pizzas/Create.cshtml
+++ b/Views/Pizzas/Create.cshtml
@@ -25,12 +25,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="DoughType" class="control-label"></label>
-                <select asp-for="DoughType" class="form-control"></select>
+                <select asp-for="DoughType" class="form-control" asp-items="Html.GetEnumSelectList<Dough>()"></select>
                 <span asp-validation-for="DoughType" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CheeseType" class="control-label"></label>
-                <select asp-for="CheeseType" class="form-control"></select>
+                <select asp-for="CheeseType" class="form-control" asp-items="Html.GetEnumSelectList<Cheese>()"></select>
                 <span asp-validation-for="CheeseType" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
