--- a/Views/Toppings/Create.cshtml
+++ b/Views/Toppings/Create.cshtml
@@ -34,11 +34,17 @@
                 </label>
             </div>
             <div class="form-group">
+                <label asp-for="imagePath" class="control-label"></label>
+                <input asp-for="imagePath" class="form-control" />
+                <span asp-validation-for="imagePath" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
-    </div>
+        
 </div>
+
 
 <div>
     <a asp-action="Index">Back to List</a>
