--- a/Views/Toppings/Delete.cshtml
+++ b/Views/Toppings/Delete.cshtml
@@ -36,6 +36,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsVegan)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.imagePath)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.imagePath)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
