--- a/Views/Toppings/Details.cshtml
+++ b/Views/Toppings/Details.cshtml
@@ -35,6 +35,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IsVegan)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.imagePath)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.imagePath)
+        </dd>
     </dl>
 </div>
 <div>
