--- a/Views/Toppings/Edit.cshtml
+++ b/Views/Toppings/Edit.cshtml
@@ -35,6 +35,11 @@
                 </label>
             </div>
             <div class="form-group">
+                <label asp-for="imagePath" class="control-label"></label>
+                <input asp-for="imagePath" class="form-control" />
+                <span asp-validation-for="imagePath" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
