--- a/Views/Pizzas/Create.cshtml
+++ b/Views/Pizzas/Create.cshtml
@@ -33,6 +33,17 @@
                 <select asp-for="CheeseType" class="form-control" asp-items="Html.GetEnumSelectList<Cheese>()"></select>
                 <span asp-validation-for="CheeseType" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Toppings" class="control-label"></label>
+                <!-- Make a new checkbox for each topping in the ViewBag -->
+                @foreach (var topping in ViewBag.Toppings)
+                {
+                    <div>
+                        <input type="checkbox" name="tToppings" value="@topping.Id" />
+                        <label>@topping.Name</label>
+                    </div>
+                }
+            </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="IsVegan" /> @Html.DisplayNameFor(model => model.IsVegan)
