Functional ERD with Junction-Table (PizzaAssociation)

--- a/Views/Orders/Index.cshtml
+++ b/Views/Orders/Index.cshtml
@@ -20,7 +20,7 @@
                 @Html.DisplayNameFor(model => model.Total)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ShippinAddress)
+                @Html.DisplayNameFor(model => model.ShippingAddress)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PaymentReceived)
@@ -44,7 +44,7 @@
                 @Html.DisplayFor(modelItem => item.Total)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ShippinAddress)
+                @Html.DisplayFor(modelItem => item.ShippingAddress)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PaymentReceived)
