--- a/Views/Carts/Details.cshtml
+++ b/Views/Carts/Details.cshtml
@@ -11,10 +11,10 @@
     <h4>Cart</h4>
     <hr />
     <dl class="row">
-        <dt class="col-sm-2 my-3">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.UserId)
         </dt>
-        <dd class="col-sm-10 my-3">
+        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.UserId)
         </dd>
     </dl>
