--- a/Views/Orders/Details.cshtml
+++ b/Views/Orders/Details.cshtml
@@ -24,10 +24,10 @@
             @Html.DisplayFor(model => model.Total)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ShippinAddress)
+            @Html.DisplayNameFor(model => model.ShippingAddress)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ShippinAddress)
+            @Html.DisplayFor(model => model.ShippingAddress)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PaymentReceived)
