--- a/Views/Orders/Edit.cshtml
+++ b/Views/Orders/Edit.cshtml
@@ -30,9 +30,9 @@
                 <span asp-validation-for="Total" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ShippinAddress" class="control-label"></label>
-                <input asp-for="ShippinAddress" class="form-control" />
-                <span asp-validation-for="ShippinAddress" class="text-danger"></span>
+                <label asp-for="ShippingAddress" class="control-label"></label>
+                <input asp-for="ShippingAddress" class="form-control" />
+                <span asp-validation-for="ShippingAddress" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
