--- a/Views/PizzaAssociations/Create.cshtml
+++ b/Views/PizzaAssociations/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model PizzaStore.Models.Cart
+﻿@model PizzaStore.Models.PizzaAssociation
 
 @{
     ViewData["Title"] = "Create";
@@ -7,16 +7,19 @@
 
 <h1>Create</h1>
 
-<h4>Cart</h4>
+<h4>PizzaAssociation</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <input asp-for="UserId" class="form-control" />
-                <span asp-validation-for="UserId" class="text-danger"></span>
+                <label asp-for="PizzaId" class="control-label"></label>
+                <select asp-for="PizzaId" class ="form-control" asp-items="ViewBag.PizzaId"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="ToppingId" class="control-label"></label>
+                <select asp-for="ToppingId" class ="form-control" asp-items="ViewBag.ToppingId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
