--- a/Views/Toppings/Create.cshtml
+++ b/Views/Toppings/Create.cshtml
@@ -42,9 +42,8 @@
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
-        
+    </div>
 </div>
-
 
 <div>
     <a asp-action="Index">Back to List</a>
