Implement dropdown nav menus as shown in class

--- a/Views/Pizzas/Details.cshtml
+++ b/Views/Pizzas/Details.cshtml
@@ -42,7 +42,7 @@
             @Html.DisplayFor(model => model.IsVegan)
         </dd>
         <dt class="col-sm-2">
-            Selected Toppings:
+            Selected Toppings
         </dt>
         <dd class="col-sm-10">
             <ul>
