Generate preview image of Pizza in Details View with partial

--- a/Views/Pizzas/Index.cshtml
+++ b/Views/Pizzas/Index.cshtml
@@ -49,6 +49,11 @@
             <td>
                 @Html.DisplayFor(modelItem => item.IsVegan)
             </td>
+            <!--
+            <td>
+                <partial name="_FinishedPizzaImage" model="item" />
+            </td>
+            -->
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
