--- a/Views/Shared/_ToppingPhoto.cshtml
+++ b/Views/Shared/_ToppingPhoto.cshtml
@@ -1,4 +1,5 @@
-﻿@model PizzaStore.Models.Topping;
+﻿@using System.Drawing;
+@model PizzaStore.Models.Topping;
 
 @{
     var photoPath = (Model != null && !string.IsNullOrEmpty(Model.imagePath)) ?
