--- a/Views/Pizzas/Details.cshtml
+++ b/Views/Pizzas/Details.cshtml
@@ -7,9 +7,11 @@
 
 <h1>Details</h1>
 
+<h4>Pizza</h4>
+<hr />
+
+<div style="display:flex;">
 <div>
-    <h4>Pizza</h4>
-    <hr />
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
@@ -59,8 +61,14 @@
             </ul>
         </dd>
     </dl>
+        <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+        <a asp-action="Index">Back to List</a>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <dl class="row">
+        <dd>
+            <partial name="_FinishedPizzaImage" model="Model" />
+        </dd>
+    </dl>
+</div>
 </div>
