--- a/Views/PizzaAssociations/Create.cshtml
+++ b/Views/PizzaAssociations/Create.cshtml
@@ -15,7 +15,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="PizzaId" class="control-label"></label>
-                <select asp-for="PizzaId" class ="form-control" asp-items="ViewBag.PizzaId"></select>
+                <label>Add toppings to pizza</label>
             </div>
 
             <div class="form-group">
