--- a/Views/Shared/_Navigation.cshtml
+++ b/Views/Shared/_Navigation.cshtml
@@ -8,10 +8,10 @@
         new MenuItem{Controller = "Home", Action = "Privacy", Label = "Privacy"}
     };
 }
-
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+<!--  bg-white navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3-->
+<nav class="">
     <div class="container-fluid">
-        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">DominionWorld</a>
+        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Slice of Heaven</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
