--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,8 +42,8 @@
             @RenderBody()
         </main>
     </div>
-
-    <footer class="border-top footer text-muted">
+    <!-- border-top  -->
+    <footer class="footer text-muted">
         <div class="container">
             &copy; 2023 - Slice Of Heaven, by Christian Barbati - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
