--- a/Views/Pizzas/Details.cshtml
+++ b/Views/Pizzas/Details.cshtml
@@ -44,6 +44,12 @@
             @Html.DisplayFor(model => model.IsVegan)
         </dd>
         <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.IsGlutenFree)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.IsGlutenFree)
+        </dd>
+        <dt class="col-sm-2">
             Selected Toppings
         </dt>
         <dd class="col-sm-10">
