--- a/Views/Shared/_Navigation.cshtml
+++ b/Views/Shared/_Navigation.cshtml
@@ -1,12 +1,16 @@
 ﻿@using PizzaStore.Models;
+@using System.Security.Claims;
 
 @{
+    /*
     var menuItems = new List<MenuItem>
     {
         new MenuItem{Controller = "Home", Action = "Index", Label = "Home"},
         new MenuItem{Controller = "Home", Action = "About", Label = "About"},
+        new MenuItem{Controller = "Pizza", Action = "Create", Label = "Create A Pizza"},
         new MenuItem{Controller = "Home", Action = "Privacy", Label = "Privacy"}
     };
+    */
 }
 <!--  bg-white navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3-->
 <nav class="">
@@ -18,10 +22,35 @@
         </button>
         <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
             <ul class="navbar-nav flex-grow-1">
-                @foreach (var menuItem in menuItems){
-                        <li class="nav-item">
+                @foreach (MenuItem menuItem in Model){
+                    /*
+                    string userRole = "";
+
+                    if (User.IsInRole("Administrator"))
+                    {
+                        System.Diagnostics.Debug.WriteLine("foo");
+                        userRole = "Administrator";
+                    }
+                    else if (User.IsInRole("Customer"))
+                    {
+                        System.Diagnostics.Debug.WriteLine("bar");
+                        userRole = "Customer";
+                    }
+
+                    if (menuItem.AllowedRoles == null)
+                    {
+                        System.Diagnostics.Debug.WriteLine("foobar");
+                        menuItem.AllowedRoles = new List<string> { " " };
+                    }
+
+                    if (menuItem.AllowedRoles.Contains(userRole))
+                    {
+                        System.Diagnostics.Debug.WriteLine(userRole + " " + menuItem.AllowedRoles);
+                        */
+                    <li class="nav-item">
                         <a class="nav-link text-dark" asp-controller=@menuItem.Controller asp-action=@menuItem.Action>@menuItem.Label</a>
                     </li>
+                    }
                 }
             </ul>
             <partial name="_LoginPartial" />
