--- a/Views/OrderAPizza/ViewMyCart.cshtml
+++ b/Views/OrderAPizza/ViewMyCart.cshtml
@@ -7,7 +7,6 @@
             <p>Your cart is empty!
         </p>
         </div>
-
         return;
     }
 }
@@ -24,8 +23,9 @@
         <thead>
             <tr>
                 <th>Pizza:</th>
-                <th>Quantity:</th> <!-- Stubbed out, not sure if I'll add. -->
                 <th>Price:</th>
+                <th>Vegan:</th>
+                <th>Gluten-Free:</th>
                 <th>Sub-Total:</th>
                 <th></th>
             </tr>
@@ -37,8 +37,30 @@
 
                 <tr>
                     <td>@cartItem.Pizza.Name</td>
-                    <td>1</td><!-- Quantity to go here if implemented -->
                     <td>@cartItem.Pizza.Price</td>
+                    <td>@{
+                            if (cartItem.Pizza.IsVegan == true)
+                            {
+                                <text>Yes</text>
+                            }
+                            else
+                            {
+                                <text>No</text>
+                            }
+                        }
+                    </td>
+                    <td>
+                        @{
+                            if (cartItem.Pizza.IsGlutenFree == true)
+                            {
+                                <text>Yes</text>
+                            }
+                            else
+                            {
+                                <text>No</text>
+                            }
+                        }
+                    </td>
                     <td>@subtotal</td>
                     <td>
                         <form class="d-inline" asp-action="DeleteCartItem">
@@ -51,13 +73,29 @@
                         </a>
                     </td>
                 </tr>
+                
             }
         </tbody>
         <tfoot>
+            <tr>
+                <th>Total:</th>
+                <td colspan="3">@{
+                        decimal total = 0;
+                        foreach(CartItem cartItem in Model.CartItems)
+                        {
+                            total += cartItem.Price;
+                        }
 
+                        <text>@total</text>
+
+                        }
+                        </td>
+                        <td></td>
+            </tr>
         </tfoot>
     </table>
     
 </div>
 <div>
+    <a asp-action="Checkout" class="btn btn-success">Checkout</a>
 </div>
