--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Every Slice Tells a Story...</h1>
-    <p><!-- Flowery description courtesy of ChatGPT -->
+    <p><!-- Description courtesy of ChatGPT -->
         At our pizzeria, we believe that every meal is an opportunity to create memories. 
         From the moment you step through our doors or browse our online menu, you'll sense the 
         aroma of freshly baked crust and the anticipation of something truly extraordinary. Our team 
