--- a/Views/PizzaAssociations/Create.cshtml
+++ b/Views/PizzaAssociations/Create.cshtml
@@ -20,11 +20,13 @@
             </div>
 
             <div class="form-group">
-                @{
+                @{  
                     foreach (Topping toppingOption in ViewBag.AvailableToppings)
                     {
                         <div>
-                            @Html.HiddenFor(pizzaAssociation => pizzaAssociation.PizzaId) <!-- Hidden field to bind PizzaId -->
+                        <!-- Bind the pizza id -->
+                        @Html.HiddenFor(pizzaAssociation => pizzaAssociation.PizzaId) <!-- Hidden field to bind PizzaId -->
+                                <input type="hidden" name="pizzaId" value="@ViewBag.currentPizza.Id" />
                             <!-- Checks the SelectedTopping list and sets the checkbox to checked or unchecked dependent on that -->
                             
                             <input class="my-3" type="checkbox" name="selectedToppingIDs" 
@@ -34,7 +36,13 @@
                                 <text>checked="checked"</text>
                             }
                             
-                            onchange="document.getElementById('toppingsForm').submit();" 
+                            onchange="
+                                document.getElementById('toppingsForm').action =
+                                '@Url.Action("Create", "PizzaAssociations", new {
+                                    pizzaId = ViewBag.currentPizza.Id 
+                                })';
+                            document.getElementById('toppingsForm').submit();
+                            " 
                             
                             value="@toppingOption.Id" />
 
@@ -57,9 +65,6 @@
             </div>
             <div class="form-group">
                 <a class="btn btn-primary" asp-controller="OrderAPizza" asp-action="AddToCart" asp-route-pizzaId="@ViewBag.currentPizza.Id">Done</a>
-                <!--
-                <input type="submit" value="Create" class="btn btn-primary" />
-                -->
             </div>
         </form>
     </div>
